app/styles/_global.scss
header {
	background: url('../images/background.png');
	box-shadow: 0 -2px 9px 0 rgba(0,0,0,0.5) inset;
	padding: 	0 50px;
	position: 	fixed;
	width: 		100%;
	z-index: 	1;
	top: 		0;
	
	@media (max-width: $screen-sm-min){
		padding: 	0 20px;
	}

	.navbar-default{
		border: 	none;
		background: transparent;
	}
	.navbar{
		margin: 	0;

		.navbar-toggle{
			margin-top: 	40px;
		}
	}
	.logo {
		margin: 	10px 0;
		@include text-hide;
		background: url(../images/logo-header.png) no-repeat;
		display: 	inline-block;
		height: 	100px;
		width: 		156px;
	}
	.nav {
		li {
			display: 	inline-block;
			margin: 	25px 4px;

			@media (max-width: $screen-md-min){
					margin: 25px 2px;
			}
			
			a {
				color: 			black;
				text-transform: uppercase;
				padding: 		10px 8px;
				&:hover {
					background-color: 	transparent;
					color: 				$show-red;
				}

				@media (max-width: $screen-md-min){
					padding: 	20px 2px;
					font-size: 	12px;
				}

				@media (max-width: $screen-sm-min){
					padding: 	8px 2px;
					font-size: 	12px;
				}

				@media (min-width: $screen-md-min){
					&:before{
						content: '';
						position: absolute;
						top: 0;
						left: 0;
						width: 100%;
						height: 1px;
						background: #777;
						transition: top 0.3s;
					}
					&:after{
						content: '';
						position: absolute;
						top: 0;
						left: 0;
						width: 1px;
						height: 1px;
						background: #777;
						transition: height 0.3s;
					}
					&:hover{
						&:before{
							top: 100%;
							opacity: 1;
						}
						&:after{
							height: 100%;
						}
					}
				}				
			}			

			&.active a { 
				color: $show-red; 
			}

			@media (max-width: $screen-sm-min){
				margin: 	5px;
				width: 		45%;
				text-align: center;
			}
		}
	}
	.icons {
		background-color: 	rgba(0,0,0,0.5);
		padding: 			10px 10px 5px;
		margin-bottom: 		10px;
		position: 			absolute;
		right: 				10%;

		a {
			background: url('../images/social-contact.png') no-repeat;
			display: 	inline-block;
			height: 	33px;
			width: 		35px;
			opacity: 	.5;
			transition: opacity .3s ease;
			&.fb, &.tw { margin-right: 5px; }
			&.tw { background-position: -47px; }
			&.yt { background-position: -94px; }

			&:hover{
				opacity: 1;
			}
		}

		@media (max-width: $screen-sm-min){
			display: none;
		}
	}
}
footer {	
	background-color: 	$show-black;
	padding: 			20px 100px;
	position: 			relative;

	@media (max-width: $screen-sm-min){
		padding: 	20px;
		clear: 		both;
	}

	@media (min-width: $screen-md-min){
		position: 	fixed;
		bottom: 	0;
		width: 		100%;
	}

	.logo {
		background: url('../images/logo-footer.png') no-repeat;
		display: 	inline-block;
		height: 	66px;
		width: 		101px;
	}
	.rights {
		color: 			white;
		font-size: 		11px;
		line-height: 	65px;


		@media (max-width: $screen-xs-min){
			text-align: 	center;
			line-height: 	1em;
			padding-top: 	20px;
		}
	}
}
.main {
	margin: 120px 0 111px;
}

.main-cover{
	width: 		804px;
	margin: 	0 auto;
	background: rgba(0,0,0,.5);
	padding: 	60px 42px;
	position: 	relative;
	display: 	block;

	@media (max-width: $screen-sm-min){
		width: 		100%;
	}
}

